comme son nom l'indique: quelques notes random sur le model

--- a/doc/thesis/201508_SomeNotesAboutTheModel.tex
+++ b/doc/thesis/201508_SomeNotesAboutTheModel.tex
@@ -21,7 +21,13 @@ After lot of experiment with different number of good and number of agent we can
     \centering
     \begin{tabular}{cc}
 	\includegraphics[width=3.5cm]{interactionNGoodNAgent.pdf}
-	\includegraphics[width=3.5cm]{interactionNGoodNAgentSD.pdf}
+	\includegraphics[width=3.5cm]{interactionNGoodNAgentSD.pdf} &
+	\includegraphics[width=3.5cm]{interactionNGoodNAgent.pdf}
+	\includegraphics[width=3.5cm]{interactionNGoodNAgentSD.pdf} \\
+	\includegraphics[width=3.5cm]{interactionNGoodNAgent.pdf}
+	\includegraphics[width=3.5cm]{interactionNGoodNAgentSD.pdf} &
+	\includegraphics[width=3.5cm]{interactionNGoodNAgent.pdf}
+	\includegraphics[width=3.5cm]{interactionNGoodNAgentSD.pdf} 
     \end{tabular}
     \caption{Interaction between number of agent and number of good.}
 \end{figure}
